# tpip

./: .gitignore  README.md  pyproject.toml  setup.py
tpip/: .gitignore  README.md  __init__.py  pyproject.toml  setup.py  tpip.py
tpip/.github/workflows/: python-publish.yml
tpip/tpip/: __init__.py  mirrors.py  tpip.py
tpip/tpip.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
