[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tpip"
version = "0.2.0"
authors = [
    { name = "yjys", email = "wsy52552@gmail.com" },
]
description = """优选 pip 镜像源，提升下载速度的命令行工具。
A command line tool that optimizes the pip image source and speeds up downloads."""
readme = "README.md"
requires-python = ">=3.7"
keywords = ["pip", "mirror", "Chinese", "speed", "cli"]
dependencies = ["requests", "aiohttp", "prettytable"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Installation/Setup",
    "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/wsy-yjys/tpip"
Issues = "https://github.com/wsy-yjys/tpip/issues"

[project.scripts]
tpip = "tpip.tpip:main"